--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
         {
           nome: "Camiseta Estampada",
           descricao: "Camiseta 100% algodão, unissex, tamanhos P, M, G",
-          preco: "R$ 15249,90",
-          imagem: "https://via.placeholder.com/300x200.png?text=Camiseta+Estampada",
-          whatsapp: "5521999999999"
+          preco: "R$ 149,90",
+          imagem: "imagens/camiseta.png",
+          whatsapp: "5521967241542"
         },
         {
           nome: "Short Jeans Feminino",
           descricao: "Short cintura alta, lavagens variadas",
           preco: "R$ 69,90",
-          imagem: "https://via.placeholder.com/300x200.png?text=Short+Jeans",
-          whatsapp: "5521999999999"
+          imagem: "imagens/short.png",
+          whatsapp: "5521967241542"
         },
         {
           nome: "Moletom Oversized",
           descricao: "Modelagem confortável, cores variadas",
           preco: "R$ 99,90",
-          imagem: "https://via.placeholder.com/300x200.png?text=Moletom+Oversized",
-          whatsapp: "5521999999999"
+          imagem: "imagens/moletom.png",
+          whatsapp: "5521967241542"
         }
       ];
 
